addressing review comments from Rob Young
also: added tests (using Junit Pioneer for env control)
adopted the resources-filtered directory convention suggested by https://maven.apache.org/plugins/maven-resources-plugin/examples/filter.html to make
it clear which resources we want filtered and which we do not.

Signed-off-by: Keith Wall <kwall@apache.org>